add an echo